# Bitcoin-Blockchain-Explorer

./: .gitignore  README.md  SYNC_SYSTEM.md  alembic.ini  bitcoin.conf  docker-compose.yaml  miner-script.sh  plan.md  pyproject.toml  test_duplicate_fix.py  test_integration.py
app/: __init__.py  background.py  cache.py  config.py  database.py  main.py
app/api/: addresses.py  blocks.py  cache.py  search.py  sync.py  transactions.py
app/models/: __init__.py  address.py  block.py  transaction.py
app/schemas/: __init__.py  address.py  block.py  transaction.py
app/services/: __init__.py  address_service.py  bitcoin_rpc.py  block_service.py  sync_service.py  transaction_service.py
app/static/css/: .gitkeep  style.css
app/templates/: address.html  base.html  block.html  blocks.html  index.html  stats.html  transaction.html  transactions.html
app/templates/components/: .gitkeep  block_list.html  search_results.html  tx_list.html
migrations/: .gitkeep  env.py
migrations/versions/: 32d9be19f9d4_initial_migration_with_blocks_.py
tests/: test_api_blocks.py  test_integration.py
